LibHeifFX/src/main/java/org/libheif/nativ/heif_h.java


    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * struct heif_error heif_list_compatible_brands(const uint8_t *data, int len, heif_brand2 **out_brands, int *out_size)
     * }
     */
    public static FunctionDescriptor heif_list_compatible_brands$descriptor() {
        return heif_list_compatible_brands.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * struct heif_error heif_list_compatible_brands(const uint8_t *data, int len, heif_brand2 **out_brands, int *out_size)
     * }
     */
    public static MethodHandle heif_list_compatible_brands$handle() {
        return heif_list_compatible_brands.HANDLE;
    }
    /**
     * {@snippet lang=c :
     * struct heif_error heif_list_compatible_brands(const uint8_t *data, int len, heif_brand2 **out_brands, int *out_size)
     * }
     */
    public static MemorySegment heif_list_compatible_brands(SegmentAllocator allocator, MemorySegment data, int len, MemorySegment out_brands, MemorySegment out_size) {
        var mh$ = heif_list_compatible_brands.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("heif_list_compatible_brands", allocator, data, len, out_brands, out_size);
            }
            return (MemorySegment)mh$.invokeExact(allocator, data, len, out_brands, out_size);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class heif_free_list_of_compatible_brands {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            heif_h.C_POINTER
        );

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(
                    heif_h.findOrThrow("heif_free_list_of_compatible_brands"),
                    DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void heif_free_list_of_compatible_brands(heif_brand2 *brands_list)
     * }
     */
    public static FunctionDescriptor heif_free_list_of_compatible_brands$descriptor() {
        return heif_free_list_of_compatible_brands.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void heif_free_list_of_compatible_brands(heif_brand2 *brands_list)
     * }
     */
    public static MethodHandle heif_free_list_of_compatible_brands$handle() {
        return heif_free_list_of_compatible_brands.HANDLE;
    }
    /**
     * {@snippet lang=c :
     * void heif_free_list_of_compatible_brands(heif_brand2 *brands_list)
     * }
     */
    public static void heif_free_list_of_compatible_brands(MemorySegment brands_list) {
        var mh$ = heif_free_list_of_compatible_brands.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("heif_free_list_of_compatible_brands", brands_list);
            }
            mh$.invokeExact(brands_list);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class heif_get_file_mime_type {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            heif_h.C_POINTER,
            heif_h.C_POINTER,
            heif_h.C_INT
        );

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(
                    heif_h.findOrThrow("heif_get_file_mime_type"),
                    DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * const char *heif_get_file_mime_type(const uint8_t *data, int len)
     * }
     */
    public static FunctionDescriptor heif_get_file_mime_type$descriptor() {
        return heif_get_file_mime_type.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * const char *heif_get_file_mime_type(const uint8_t *data, int len)
     * }
     */
    public static MethodHandle heif_get_file_mime_type$handle() {
        return heif_get_file_mime_type.HANDLE;
    }
    /**
     * {@snippet lang=c :
     * const char *heif_get_file_mime_type(const uint8_t *data, int len)
     * }
     */
    public static MemorySegment heif_get_file_mime_type(MemorySegment data, int len) {
        var mh$ = heif_get_file_mime_type.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("heif_get_file_mime_type", data, len);
            }
            return (MemorySegment)mh$.invokeExact(data, len);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class heif_context_alloc {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            heif_h.C_POINTER    );

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(
                    heif_h.findOrThrow("heif_context_alloc"),
                    DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * struct heif_context *heif_context_alloc()
     * }
     */
    public static FunctionDescriptor heif_context_alloc$descriptor() {
        return heif_context_alloc.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * struct heif_context *heif_context_alloc()
     * }
     */
    public static MethodHandle heif_context_alloc$handle() {
        return heif_context_alloc.HANDLE;
    }
    /**
     * {@snippet lang=c :
     * struct heif_context *heif_context_alloc()
     * }
     */
    public static MemorySegment heif_context_alloc() {
        var mh$ = heif_context_alloc.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("heif_context_alloc");
            }
            return (MemorySegment)mh$.invokeExact();
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class heif_context_free {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            heif_h.C_POINTER
        );

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(
                    heif_h.findOrThrow("heif_context_free"),
                    DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void heif_context_free(struct heif_context *)
     * }
     */
    public static FunctionDescriptor heif_context_free$descriptor() {
        return heif_context_free.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void heif_context_free(struct heif_context *)
     * }
     */
    public static MethodHandle heif_context_free$handle() {
        return heif_context_free.HANDLE;
    }
    /**
     * {@snippet lang=c :
     * void heif_context_free(struct heif_context *)
     * }
     */
    public static void heif_context_free(MemorySegment x0) {
        var mh$ = heif_context_free.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("heif_context_free", x0);
            }
            mh$.invokeExact(x0);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }
    private static final int heif_reader_grow_status_size_reached = (int)0L;
    /**
     * {@snippet lang=c :
     * enum heif_reader_grow_status.heif_reader_grow_status_size_reached = 0
     * }
     */
    public static int heif_reader_grow_status_size_reached() {
        return heif_reader_grow_status_size_reached;
    }
    private static final int heif_reader_grow_status_timeout = (int)1L;
    /**
     * {@snippet lang=c :
     * enum heif_reader_grow_status.heif_reader_grow_status_timeout = 1
     * }
     */
    public static int heif_reader_grow_status_timeout() {
        return heif_reader_grow_status_timeout;
    }
    private static final int heif_reader_grow_status_size_beyond_eof = (int)2L;
    /**
     * {@snippet lang=c :
     * enum heif_reader_grow_status.heif_reader_grow_status_size_beyond_eof = 2
     * }
     */
    public static int heif_reader_grow_status_size_beyond_eof() {
        return heif_reader_grow_status_size_beyond_eof;
    }

    private static class heif_context_read_from_file {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            heif_error.layout(),
            heif_h.C_POINTER,
            heif_h.C_POINTER,
            heif_h.C_POINTER
        );

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(
                    heif_h.findOrThrow("heif_context_read_from_file"),
                    DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * struct heif_error heif_context_read_from_file(struct heif_context *, const char *filename, const struct heif_reading_options *)
     * }
     */
    public static FunctionDescriptor heif_context_read_from_file$descriptor() {
        return heif_context_read_from_file.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * struct heif_error heif_context_read_from_file(struct heif_context *, const char *filename, const struct heif_reading_options *)
     * }
     */
    public static MethodHandle heif_context_read_from_file$handle() {
        return heif_context_read_from_file.HANDLE;
    }
    /**
     * {@snippet lang=c :
     * struct heif_error heif_context_read_from_file(struct heif_context *, const char *filename, const struct heif_reading_options *)
     * }
     */
    public static MemorySegment heif_context_read_from_file(SegmentAllocator allocator, MemorySegment x0, MemorySegment filename, MemorySegment x2) {
        var mh$ = heif_context_read_from_file.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("heif_context_read_from_file", allocator, x0, filename, x2);
            }
            return (MemorySegment)mh$.invokeExact(allocator, x0, filename, x2);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class heif_context_read_from_memory {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            heif_error.layout(),
            heif_h.C_POINTER,
            heif_h.C_POINTER,
            heif_h.C_LONG_LONG,
            heif_h.C_POINTER
        );

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(
                    heif_h.findOrThrow("heif_context_read_from_memory"),
                    DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * struct heif_error heif_context_read_from_memory(struct heif_context *, const void *mem, size_t size, const struct heif_reading_options *)
     * }
     */
    public static FunctionDescriptor heif_context_read_from_memory$descriptor() {
        return heif_context_read_from_memory.DESC;
    }
